# vest_rust_backend

./: .env  Cargo.toml  README.md  technical-test_md (2) (1).md
entity/: Cargo.toml
entity/src/: event_entity.rs  lib.rs  mod.rs  prelude.rs  stock.rs  stock_entity.rs  stock_order_entity.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231027_150134_stock_create_table.rs  m20231030_214408_event_create_table.rs  m20231030_220546_stock_order_create_table.rs
src/: main.rs
src/api/: graphql.rs  lib.rs  mod.rs  mutation.rs  query.rs  resolver.rs  service.rs
src/external_api/: nasdaq.rs
src/kafka/: consumer.rs  producer.rs  service.rs
src/utils/: errors.rs
