[package]
name = "vest-rust-test"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity"]


[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
async-graphql = {version = "6.0.9", features = ["dataloader", "chrono"]}
tokio = { version = "1", features = ["full"] }
figment = "0.10.11"
anyhow = "1.0.75"
async-trait = "0.1.74"
sea-orm = {version = "0.12.4", features=["sqlx-postgres", "runtime-tokio-rustls"]}
serde = "1.0.190"
dotenv = "0.15.0"
axum = "0.6.20"
async-graphql-axum = "6.0.9"
tower-http = {version = "0.4.4", features = ["trace"]}
tracing = "0.1.40"
rdkafka = {version = "0.34.0", features = ["cmake-build"]}
serde_json = "1.0.108"
reqwest = {version = "0.11.22", features = ["json"]}
