[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {version = "6.0.9", features = ["uuid", "uuid08"]}
chrono = "0.4.31"
sea-orm = {version = "0.12.4"}
serde = "1.0.190"
uuid = {version = "1.5.0", features = ["serde", "v4"]}
